# errormining

./: CHANGELOG  CMakeLists.txt  README  README.markdown  errormining.pri  errormining.pro  projects.pri  projects.pro
Examples/: Makefile  README  nlwikipedia-sample.mistakes
cmake/: FindSqlite3.cmake
createminedb/: CMakeLists.txt  createminedb.cpp  createminedb.pro
errormining/: .cproject  errormining.pro
errormining/errormining/: Form.hh  HashedCorpus.hh  Observable.hh  Observer.hh  ProgramOptions.hh  Scoring.hh  SuffixArray.hh
errormining/errormining/util/: ssort.hh
errormining/fadd/: fadd.h
errormining/src/Form/: Form.cpp  Form.ih
errormining/src/HashAutomaton/: HashAutomaton.ih
errormining/src/HashedCorpus/: HashedCorpus.ih
errormining/src/Miner/: Miner.ih
errormining/src/Observable/: Observable.cpp
errormining/src/ProgramOptions/: ProgramOptions.cpp
errormining/src/Sentence/: Sentence.cpp
errormining/src/SuffixArray/: SuffixArray.cpp
errormining/src/util/ssort/: ssort.cpp
extend/: extend.cpp  extend.pro
libmine/: .project  CMakeLists.txt  libmine.pro
libmine/errormining/: BestRatioExpander.hh  CharacterReader.hh  Expander.hh  Form.hh  HashAutomaton.hh  HashedCorpus.hh  Miner.hh  Observable.hh  ProgramOptions.hh  Reader.hh  ScoringMethod.hh  Sentence.hh  SentenceHandler.hh  SimpleExpander.hh  SuffixArray.hh  TokenizedSentenceReader.hh
libmine/errormining/util/: ssort.hh
libmine/fadd/: NOTICE  fadd.cpp  fadd.h  fsa.h
libmine/src/: BestRatioExpander.cpp  CharacterReader.cpp  Expander.cpp  SimpleExpander.cpp
libmine/src/Form/: Form.cpp  Form.ih
libmine/src/HashAutomaton/: HashAutomaton.cpp
libmine/src/HashedCorpus/: HashedCorpus.cpp
libmine/src/Miner/: Miner.cpp  Miner.ih
libmine/src/Observable/: Observable.ih
libmine/src/ProgramOptions/: ProgramOptions.cpp  ProgramOptions.ih
libmine/src/ScoringMethod/: ScoringMethod.cpp  ScoringMethod.ih
libmine/src/Sentence/: Sentence.cpp  Sentence.ih
libmine/src/SuffixArray/: SuffixArray.cpp  SuffixArray.ih
libmine/src/TokenizedSentenceReader/: TokenizedSentenceReader.cpp  TokenizedSentenceReader.ih
libmine/src/util/ssort/: ssort.cpp  ssort.ih
mine/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.hh  ProgramOptions.ih  mine.cpp  mine.pro
miningeval/: CMakeLists.txt  miningeval.cpp  miningeval.pro
miningviewer/: CMakeLists.txt  FormTreeWidgetItem.cpp  FormTreeWidgetItem.hh  FormTreeWidgetItem.ih  MinerMainWindow.cpp  MinerMainWindow.hh  MinerMainWindow.ih  MinerMainWindow.ui  PreferencesDialog.cpp  PreferencesDialog.hh  PreferencesDialog.ih  PreferencesDialog.ui  RichTextDelegate.cpp  RichTextDelegate.hh  global.hh  miningviewer.cpp  miningviewer.pro
util/: extend.py
